--- a/_layouts/contact.html
+++ b/_layouts/contact.html
@@ -1,9 +1,8 @@
 ---
 layout: default
+title: Contact Me
 ---
-<h1>{{ page.title }}</h1>
-<p class="meta">{{ page.date | date_to_string }}</p>
 
-<div class="post">
+<h1>{{ page.title }}</h1>
+<p>Please feel free to drop me a <a href="mailto:miles@finexus.com">line</a>!</p>
   {{ content }}
-</div>
