--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
 	    		<ul>
 	        		<li><a href="/">Home</a></li>
 		        	<li><a href="/bio">Bio</a></li>
-				<li><a href="/pictures">Photos</a></li>
+				<li><a href="/pictures">Pictures</a></li>
 	        		<li><a href="/media">Media</a></li>
 	        		<li><a href="/contact">Contact</a></li>
 	    		</ul>
