--- a/css/main.css
+++ b/css/main.css
@@ -6,8 +6,7 @@ img{
     max-width: 95%
 }
 img.sized{
-    width: 80px;
-    height: 65px;
+    max-width: 60%;
 }
 nav ul, footer ul {
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
