--- a/css/main.css
+++ b/css/main.css
@@ -3,8 +3,8 @@ body {
     width: 70%;
 }
 img{
-    width: auto;
-    height: 100%;
+    width: 100%;
+    height: auto;
     max-width: 50vw;   
 }
 img.sized{
