--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,11 +20,11 @@
 			{{ content }}
 			
 			</div><!-- /.container -->
-			<footer>
+			<!--<footer>
 	    		<ul>
-	        		<!--<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>-->
-	        		<!--<li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>-->
+	        		<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
+	        		<li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
 				</ul>
-			</footer>
+			</footer>-->
 		</body>
 	</html>
