--- a/css/main.css
+++ b/css/main.css
@@ -33,6 +33,7 @@ h1 {
 }
 p {
     font-size: 1.5em;
+    font-family:'Palatino', 'Helvetica', 'Sans-Serif';
     line-height: 1.4em;
     color: #333;
     text-align: center;
