--- a/css/main.css
+++ b/css/main.css
@@ -28,7 +28,7 @@ a:hover {
 }
 h1 {
     font-size: 3em;
-    font-family:'Garamond', 'Helvetica', 'Sans-Serif';
+    font-family:'Palatino', 'Helvetica', 'Sans-Serif';
     text-align: center;
 }
 p {
