--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,7 @@
 			<link rel="stylesheet" type="text/css" href="/css/main.css">
 		</head>
 		<body>
+			<div>
 			<nav>
 	    		<ul>
 	        		<li><a href="/">Home</a></li>
@@ -15,6 +16,7 @@
 	        		<li><a href="/contact">Contact</a></li>
 	    		</ul>
 			</nav>
+			</div>
 			<div class="container">
 			
 			{{ content }}
