--- a/css/main.css
+++ b/css/main.css
@@ -1,13 +1,16 @@
 body {
-    margin: 60px auto;
-    width: 70%;
+    margin:0;
+    width: 100%;
 }
-div nav ul{
-    height: 15%;
+ul{
+    margin:auto;
+    height: 50px;
     background-color:rgba(42,94,155,0.3)
 }
 img{
-    max-width: 50%;   
+    width:70%;
+    display:block;
+    margin:auto;   
 }
 img.sized{
     max-width: 60%;
@@ -17,7 +20,7 @@ div{
 }
 nav ul, footer ul {
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
-    padding: 0px;
+    padding: 5%;
     list-style: none;
     font-weight: bold;
     text-align: center;
@@ -43,7 +46,8 @@ p {
     font-family:'Palatino', 'Helvetica', 'Sans-Serif';
     line-height: 1.4em;
     color: #333;
-    text-align: center;
+    margin:auto;
+    text-align:center;
 }
 footer {
     border-top: 1px solid #d5d5d5;
