myriad  sizes etc

--- a/css/main.css
+++ b/css/main.css
@@ -31,7 +31,8 @@ nav ul li, footer ul li {
 }
 a {
     text-decoration: none;
-    color: #999;
+    color: rgb(20,45,70);
+    font-size: 2em
 }
 a:hover {
     text-decoration: underline;
