--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,7 @@ body {
 }
 ul{
     margin:auto;
-    height: 50px;
+    height: 3em;
     background-color:rgba(42,94,155,0.5)
 }
 img{
@@ -32,32 +32,32 @@ nav ul li, footer ul li {
 a {
     text-decoration: none;
     color: rgb(20,45,70);
-    font-size: 2em
+    font-size: 1.75em
 }
 a:hover {
     text-decoration: underline;
 }
 h1 {
-    font-size: 3em;
+    font-size: 2.75em;
     font-family:'Palatino', 'Helvetica', 'Sans-Serif';
     text-align: center;
 }
 p {
-    font-size: 1.5em;
+    font-size: 1.25em;
     font-family:'Palatino', 'Helvetica', 'Sans-Serif';
-    line-height: 1.4em;
+    line-height: 1.2em;
     color: #333;
     margin:auto;
     text-align:center;
 }
 footer {
     border-top: 1px solid #d5d5d5;
-    font-size: .8em;
+    font-size: .7em;
 }
 
 ul.posts { 
     margin: 20px auto 40px; 
-    font-size: 1.5em;
+    font-size: 1.25em;
 }
 
 ul.posts li {
