--- a/css/main.css
+++ b/css/main.css
@@ -63,3 +63,20 @@ ul.posts {
 ul.posts li {
     list-style: none;
 }
+
+.column {
+	float:left;
+	width:50%;
+}
+
+.row:after {
+	content: "";
+    display: table;
+  	clear: both;
+}
+
+@media screen and (max-width: 600px) {
+	.column {
+   			width: 100%;
+	}
+}
