--- a/css/main.css
+++ b/css/main.css
@@ -72,10 +72,15 @@ ul.posts li {
 .column.right{
 	float:right;
 	width:40%;
-	background-image: url('https://leemlb06pmi.github.io/photos/rock_backdrop.jpg');
+	/*background-image: url('https://leemlb06pmi.github.io/photos/rock_backdrop.jpg');
 	background-size: cover;
 	background-repeat: no-repeat;
-	opacity:.2;
+	opacity:.2;*/
+}
+
+.column{
+	float:left;
+	width: 50%;
 }
 
 .row:after {
