--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,7 @@
 body, html{
-    margin:0;
-    width: 100%;
+    	margin:0;
+    	width: 100%;
+	height: 100%
 }
 
 img{
@@ -14,11 +15,9 @@ div{
     background-color: rgb(255,255,255)
 }
 
-nav {
-    	background-color:rgba(42,94,155,0.5);
-}
-
 nav ul, footer ul {
+	
+	background-color:rgba(42,94,155,0.5);
     	font-family:'Helvetica', 'Arial', 'Sans-Serif';
     	padding: 2.5%;
     	list-style: none;
@@ -26,35 +25,16 @@ nav ul, footer ul {
     	text-align: right;
 }
 
-nav ul li, footer ul li {
-    display: inline;
-    margin-right: 2.5%;
+nav ul li {
+    	display: inline;
+    	margin-right: 2.5%;
 }
 
-/*nav {
-	font-family:'Helvetica', 'Arial', 'Sans-Serif';
-}
-ul{
-    	margin:auto;
-    	height: 3em;
-	list-style: none;
-	font-weight: bold;
-    	background-color:rgba(42,94,155,0.5)
-}
-
-li {
-	float:right;
 li a {
-	display: inline;
-	text-decoration: none;
-    	padding: 2.5%;
 	color: rgb(20,45,70);
-    	font-size: 1.75em
 }
-
-*/
 	
-a:hover {
+li a:hover {
     text-decoration: underline;
 	
 }
