--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,5 @@
-body, html{
+body{
     	margin:0;
-    	width: 100%;
-	height: 100%;
 }
 
 img{
@@ -30,8 +28,9 @@ nav ul li {
     	margin-right: 2.5%;
 }
 
-li a {
+li a:link {
 	color: rgb(20,45,70);
+	text-decoration:none;
 }
 	
 li a:hover {
