--- a/css/main.css
+++ b/css/main.css
@@ -1,11 +1,13 @@
 body{
-    	margin:0% 0% 0% 0%;
+    	margin:0px;
+	padding: 0px;
 }
 
 img{
     display:block;
     margin:auto;   
 }
+
 img.sized{
     max-width: 60%;
 }
