--- a/css/main.css
+++ b/css/main.css
@@ -19,6 +19,7 @@ nav ul, footer ul {
 	background-color:rgba(42,94,155,0.5);
     	font-family:'Helvetica', 'Arial', 'Sans-Serif';
     	padding: 2.5%;
+	margin: auto;
     	list-style: none;
 	font-weight: bold;
     	text-align: right;
