--- a/css/main.css
+++ b/css/main.css
@@ -15,6 +15,10 @@ div{
     background-color: rgb(255,255,255)
 }
 
+div.container{
+	margin-top:.5%;
+}
+
 nav ul, footer ul {
 	background-color:rgba(42,94,155,0.5);
     	font-family:'Helvetica', 'Arial', 'Sans-Serif';
