--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
 			<nav>
 	    		<ul>
 	        		<li><a href="/">Home</a></li>
-		        	<li><a href="/bio">Bio</a></li>
+		        	<li><a href="/bio">Biography</a></li>
 				<li><a href="/pictures">Pictures</a></li>
 	        		<li><a href="/media">Media</a></li>
 	        		<li><a href="/contact">Contact</a></li>
@@ -20,13 +20,6 @@
 			<div class="container">
 			
 			{{ content }}
-			
-			</div><!-- /.container -->
-			<!--<footer>
-	    		<ul>
-	        		<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
-	        		<li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
-				</ul>
-			</footer>-->
+		
 		</body>
 	</html>
