--- a/css/main.css
+++ b/css/main.css
@@ -12,7 +12,7 @@ img.sized{
     max-width: 60%;
 }
 div{
-    background-color: rgb(255,255,255);
+    /*background-color: rgb(255,255,255);*/
 }
 
 div.container{
