--- a/css/main.css
+++ b/css/main.css
@@ -14,6 +14,11 @@ img.sized{
 div{
     /*background-color: rgb(255,255,255);*/
 }
+div.back {
+	background-image: url("https://leemlb06pmi.github.io/photos/beach.jpg");
+	background-size: cover;
+	filter:blur(3px);
+}
 
 div.container{
 	/*margin-top:.5%;*/
