--- a/css/main.css
+++ b/css/main.css
@@ -14,7 +14,7 @@ img.sized{
 div{
     /*background-color: rgb(255,255,255);*/
 }
-div.back {
+.back {
 	background-image: url("https://leemlb06pmi.github.io/photos/beach.jpg");
 	background-size: cover;
 	filter:blur(3px);
