--- a/css/main.css
+++ b/css/main.css
@@ -20,6 +20,7 @@ div{
 }
 
 .back:after {
+	content: "";
 	background-image: url("https://leemlb06pmi.github.io/photos/beach.jpg");
 	background-size: cover;
 	filter:blur(3px);
