--- a/css/main.css
+++ b/css/main.css
@@ -12,11 +12,9 @@ img.sized{
     max-width: 60%;
 }
 
-.back::before {
-	content: "";
-	background: url("https://leemlb06pmi.github.io/photos/beach.jpg");
-	/*background-size: cover;
-	filter:blur(3px);*/
+.back{
+	background-image: url("https://leemlb06pmi.github.io/photos/beach.jpg");
+	background-size: cover;
 }
 
 div.container{
