--- a/css/main.css
+++ b/css/main.css
@@ -21,8 +21,9 @@ div.container{
 	/*margin-top:.5%;*/
 }
 
-nav ul, footer ul {
-	background-color:rgba(42,94,155,0.5);
+nav ul {
+	background-color:rgba(255,255,255,0)
+	/*background-color:rgba(42,94,155,0.5);*/
     	font-family:'Helvetica', 'Arial', 'Sans-Serif';
     	padding: 2.5%;
 	margin: auto;
@@ -39,7 +40,7 @@ nav ul li {
 li a:link {
 	color: rgb(20,45,70);
 	text-decoration:none;
-	font-size: 1.25em;
+	font-size: 1.5em;
 }
 	
 li a:hover {
