--- a/css/main.css
+++ b/css/main.css
@@ -83,10 +83,6 @@ ul.posts li {
 .column.right{
 	float:right;
 	width:40%;
-	/*background-image: url('https://leemlb06pmi.github.io/photos/rock_backdrop.jpg');
-	background-size: cover;
-	background-repeat: no-repeat;
-	opacity:.2;*/
 }
 
 .column{
@@ -102,6 +98,8 @@ ul.posts li {
 
 /* adjusting dynamic positiong to width of iphone12 max basically */ 
 @media screen and (max-width: 1300px) {
-	.column, .column.left, .column.right {width: 100%;}
-	img {border-radius:0%;}
+	/*.column, .column.left, .column.right {width: 100%;}*/
+	.column.right {float: left; width:100%}
+	.column.left {float:left; width:100%;} 
+	/*img {border-radius:0%;}*/
 }
