--- a/css/main.css
+++ b/css/main.css
@@ -8,8 +8,9 @@ img{
     margin:auto;   
 }
 
-img.sized{
-    max-width: 60%;
+img.home{
+    	width: 100%; 
+	border-radius: 0% 15% 15% 0%;
 }
 
 .back{
@@ -98,8 +99,8 @@ ul.posts li {
 
 /* adjusting dynamic positiong to width of iphone12 max basically */ 
 @media screen and (max-width: 1300px) {
-	/*.column, .column.left, .column.right {width: 100%;}*/
+	.column {width:100%;}
 	.column.right {float: left; width:100%}
 	.column.left {float:left; width:100%;} 
-	/*img {border-radius:0%;}*/
+	img.home {border-radius:0%;}
 }
