--- a/css/main.css
+++ b/css/main.css
@@ -13,6 +13,13 @@ img{
 	border-radius: 0% 15% 15% 0%;
 }
 
+.home_oppo{
+	background-color:rgba(170,149,166,.5); 
+	border-radius: 15% 0% 15% 0%;
+	margin:0px; 
+	padding:0px;
+}
+
 .back{
 	background-image: url("https://leemlb06pmi.github.io/photos/beach.jpg");
 	background-size: cover;
@@ -103,4 +110,5 @@ ul.posts li {
 	.column.right {float: left; width:100%}
 	.column.left {float:left; width:100%;} 
 	img.home {border-radius:0%;}
+	.home_oppo {border-radius:0%}
 }
