--- a/css/main.css
+++ b/css/main.css
@@ -13,7 +13,7 @@ img{
 	border-radius: 0% 15% 15% 0%;
 }
 
-.home_oppo{
+blockquote.home_oppo{
 	background-color:rgba(170,149,166,.5); 
 	border-radius: 15% 0% 15% 0%;
 	margin:0px; 
