--- a/css/main.css
+++ b/css/main.css
@@ -10,23 +10,20 @@ img{
 
 .home{  
 	width: 100%; 
-	border-radius: 0px 50px 50px 0px;
+	border-radius: 0 15% 15% 0;
 }
 
 blockquote.home_oppo{
-	background-color:rgba(170,149,166,.5); 
-	border-radius: 50px 0px 50px 0px;
-	margin:0px; 
-	padding:0px;
+	background-color:rgba(170,149,166,.9); 
+	border-radius: 30% 0% 30% 0%;
+	margin-top 5%; 
+	padding-top:5%;
+	padding-bottom:5%;
 }
 
 .back{
 	background-image: url("https://leemlb06pmi.github.io/photos/beach.jpg");
 	background-size: cover;
-}
-
-div.container{
-	/*margin-top:.5%;*/
 }
 
 nav ul {
@@ -85,12 +82,12 @@ ul.posts li {
 
 .column.left {
 	float:left;
-	width:60%;
+	width:40%;
 }
 
 .column.right{
 	float:right;
-	width:40%;
+	width:60%;
 }
 
 .column{
@@ -109,6 +106,6 @@ ul.posts li {
 	.column {width:100%;}
 	.column.right {float: left; width:100%;}
 	.column.left {float:left; width:100%;} 
-	img.home {border-radius:0px;}
-	blockquote.home_oppo {border-radius:0px;}
+	img.home {border-radius:0%;}
+	blockquote.home_oppo {border-radius:0%; margin-top:0%;}
 }
