--- a/css/main.css
+++ b/css/main.css
@@ -80,7 +80,7 @@ footer {
 	font-size: 1.25em;
 	opacity:.8;
 	transition:.3s;
-  	margin: 50% 50%;
+  	margin: 25%;
   	cursor: pointer;
 	display:inline-block;
 	border-radius:50%;
@@ -94,6 +94,13 @@ footer {
 	opacity:1;
 }
 
+.b2 {
+	background-color:rgb(225,194,174);
+}
+
+.b2:hover{
+	opacity:1;
+}
 ul.posts { 
     margin: 20px auto 40px; 
     font-size: 1.25em;
