--- a/css/main.css
+++ b/css/main.css
@@ -16,7 +16,7 @@ img{
 blockquote.home_oppo{
 	background-color:rgba(170,149,166,.9); 
 	border-radius: 30% 0% 30% 0%;
-	margin-top 5%; 
+	margin-top:5%; 
 	padding-top:5%;
 	padding-bottom:5%;
 }
