--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,8 @@
 		</head>
 		<body>
 			<div>
-			<nav>
+				<h1 style="text-align:left;">Miles Herr | Tenor</h1>
+			<!--nav>
 	    		<ul>
 	        		<li><a href="/">Home</a></li>
 		        	<li><a href="/bio">Biography</a></li>
@@ -15,7 +16,7 @@
 	        		<li><a href="/media">Media</a></li>
 	        		<li><a href="/contact">Contact</a></li>
 	    		</ul>
-			</nav>
+			<--/nav>
 			</div>
 			<div class="container">
 			
