--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,8 @@
 		<body>
 			<div>
 				<h1 style="text-align:left;">Miles Herr | Tenor</h1>
-			<!--nav>
+			<!--
+			<nav>
 	    		<ul>
 	        		<li><a href="/">Home</a></li>
 		        	<li><a href="/bio">Biography</a></li>
@@ -16,7 +17,8 @@
 	        		<li><a href="/media">Media</a></li>
 	        		<li><a href="/contact">Contact</a></li>
 	    		</ul>
-			<--/nav>
+			</nav>
+			-->
 			</div>
 			<div class="container">
 			
