--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
 		</head>
 		<body>
 			<div>
-				<h1 style="text-align:left;">Miles Herr | Tenor</h1>
+				<h1 style="padding:2.5%">Miles Herr | Tenor</h1>
 			<!--
 			<nav>
 	    		<ul>
