--- a/css/main.css
+++ b/css/main.css
@@ -9,7 +9,7 @@ img{
 }
 
 .home{  
-	margin: 5%; 
+	padding: 5% 5% 0% 5%; 
 	border-radius: 0 15% 15% 0;
 }
 
@@ -171,6 +171,6 @@ ul.posts li {
 	.column {width:100%;}
 	.column.right {float: left; width:100%;}
 	.column.left {float:left; width:100%;} 
-	img.home {border-radius:0%;}
+	img.home {border-radius:0%; object-fit:cover; width:90%; object-position:50% 50%;}
 	blockquote.home_oppo {border-radius:0%; margin-top:0%;}
 }
