--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
 			<link rel="stylesheet" type="text/css" href="/css/main.css">
 		</head>
 		<body>
-			<div>
+			<div style="background-color:rgb(218,22,226);">
 				<h1 style="padding:2.5%">Miles Herr | Tenor</h1>
 			<!--
 			<nav>
