--- a/css/main.css
+++ b/css/main.css
@@ -10,14 +10,14 @@ img{
 
 .home{  
 	padding: 5% 5% 0% 5%; 
-	width:95%;
+	width:100%;
 	border-radius: 0 15% 15% 0;
 }
 
 blockquote.home_oppo{
-	background-color:rgba(170,149,166,.75); 
-	border-radius: 50% 0% 50% 0%;
-	margin-top:5%; 
+	background-color:rgba(170,149,166,.7); 
+	/*border-radius: 50% 0% 50% 0%;*/
+	margin:10% 0% 2.5% 0%; 
 	padding-top:5%;
 	padding-bottom:5%;
 }
@@ -85,7 +85,7 @@ footer {
 	overflow:none;
 	text-align:center;
 	font-size: 1.25em;
-	opacity:.8;
+	opacity:.85;
 	transition:.3s;
   	margin: 25%;
 }
@@ -173,5 +173,5 @@ ul.posts li {
 	.column.right {float: left; width:100%;}
 	.column.left {float:left; width:100%;} 
 	img.home {border-radius:0%; object-fit:cover; width:90%; object-position:50% 50%;}
-	blockquote.home_oppo {border-radius:0%; margin-top:0%;}
+	blockquote.home_oppo {border-radius:0%; margin:2.5% 0% 0% 0%;}
 }
