--- a/css/main.css
+++ b/css/main.css
@@ -12,12 +12,65 @@ img{
 	position:relative;
 }
 
-.bottomCenter{
+.picContainActive{
+	position:relative;
+	width:50%;
+}
+
+.imageFadeWText{
+	opacity: 1;
+  	display: block;
+  	width: 100%;
+  	height: auto;
+  	transition: .3s ease;
+  	backface-visibility: hidden;
+}
+
+.textLocate {
+  transition: .3s ease;
+  opacity: 0;
+  position: absolute;
+  top: .5%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%)
+}
+
+.bottomCenterHead{
 	position:absolute;
 	bottom:.5%;
 	left:32.5%;
 	font-size:1em;
 	color:white;
+}
+
+.bottomCenter{
+	position:absolute;
+	bottom:.5%;
+	left:50%;
+	font-size:1em;
+	color:white;
+}
+.topCenter{
+	position:absolute;
+	top:.5%;
+	left:32.5%;
+	font-size:1em;
+	color:white;
+}
+.picContainActive:hover .imageFadeWText {
+  opacity: 0.3;
+}
+
+.picContainActive:hover .bottomCenter {
+  opacity: 1;
+}
+
+.text {
+  background-color: #4CAF50;
+  color: white;
+  font-size: 16px;
+  padding: 16px 32px;
 }
 
 .home{  
