--- a/css/main.css
+++ b/css/main.css
@@ -20,13 +20,14 @@ img{
 }
 .picContainActive{
 	position:relative;
-	width:50%;
+	margin:0% 15%;
+	width:70%;
 }
 
 .imageFadeWText{
 	opacity: 1;
   	display: block;
-  	width: 100%;
+  	width: 70%;
   	height: auto;
   	transition: .3s ease;
   	backface-visibility: hidden;
