--- a/css/main.css
+++ b/css/main.css
@@ -27,6 +27,7 @@ img{
 .imageFadeWText{
 	opacity: 1;
   	display: block;
+	margin:2.5%;
   	width: 70%;
   	height: auto;
   	transition: .3s ease;
