--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,8 @@
 		</head>
 		<body>
 			<div style="background-color:rgb(218,222,226);">
-				<h1 style="padding:2.5%">Miles Herr | Tenor</h1>
+				<h1 style="padding:2.5%">Miles Herr</h1>
+				<h2> Tenor </h2>
 			<!--
 			<nav>
 	    		<ul>
