--- a/css/main.css
+++ b/css/main.css
@@ -101,12 +101,21 @@ li a:hover {
 	
 }
 h1 {
-	margin:0;
+	margin:.15%;
     	font-size: 2.75em;
-	letter-spacing:1.5em;
+	letter-spacing:.5em;
    	font-family:'Georgia, serif', 'Palatino';
     	text-align: center;
 }
+
+h2{
+	margin.15%;
+	text-align: center;
+	font-family:'Georgia, serif', 'Palatino';
+	font-size: 2.25em;
+	letter-spacing:.25em;
+}
+
 p {
     font-size: 1.25em;
     font-family:'Optima', 'Palatino';
