--- a/css/main.css
+++ b/css/main.css
@@ -102,7 +102,7 @@ li a:hover {
 }
 h1 {
 	margin: 0%;
-    	font-size: 2.75em;
+    	font-size: 3.75em;
 	letter-spacing:.5em;
    	font-family:'Georgia, serif', 'Palatino';
     	text-align: center;
@@ -112,9 +112,16 @@ h2{
 	margin: 0%;
 	text-align: center;
 	font-family:'Georgia, serif', 'Palatino';
-	font-size: 2.25em;
+	font-size: 3em;
 	letter-spacing:.25em;
 	padding: 0% 0% 2.5% 0%;
+}
+
+h3{
+	margin:0%;
+	text-align:center;
+	font-size:2.75em;
+	font-family:'Georgia, serif', 'Palatino';
 }
 
 p {
