--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,13 @@ img{
     margin:auto;   
 }
 
+.shadowBox{
+	width: 80%;
+	background-color: white;
+  	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  	margin-bottom: 25px;
+}
+
 .picContain{
 	position:relative;
 }
