--- a/css/main.css
+++ b/css/main.css
@@ -44,7 +44,7 @@ img{
 	transition: .3s ease;
   	opacity: 0;
   	position: absolute;
-  	top: 50%;
+  	bottom: 0%;
   	left: 50%;
   	transform: translate(-50%, -50%);
   	-ms-transform: translate(-50%, -50%)
