--- a/css/main.css
+++ b/css/main.css
@@ -59,23 +59,19 @@ img{
 }
 
 .home{  
-	padding: 5% 5% 0% 5%; 
 	width:100%;
-	border-radius: 0 15% 15% 0;
+	border-radius: 0 10% 10% 0;
 }
 
 blockquote.home_oppo{
 	background-color:rgba(170,149,166,.7); 
-	/*border-radius: 50% 0% 50% 0%;*/
 	margin:10% 0% 2.5% 0%; 
 	padding-top:5%;
 	padding-bottom:5%;
 }
 
 .back{
-	background-image: /*url("https://leemlb06pmi.github.io/photos/beach.jpg"), 
-		url("https://leemlb06pmi.github.io/photos/rock_backdrop.jpg"),*/
-		linear-gradient(180deg, rgb(20,45,70), rgb(184,211,222));
+	background-image: linear-gradient(180deg, rgb(20,45,70), rgb(184,211,222));
 	background-size:100%;
 	/*background-repeat:no-repeat;
 	background-position: top;*/
@@ -83,7 +79,6 @@ blockquote.home_oppo{
 
 nav ul {
 	background-color:rgba(255,255,255,0)
-	/*background-color:rgba(42,94,155,0.5);*/
     	font-family:'Helvetica', 'Arial', 'Sans-Serif';
     	padding: 2.5%;
 	margin: auto;
