--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
 		<body>
 			<div style="background-color:rgb(218,222,226);">
 				<h1 style="padding:1.5%">Miles Herr
-				<h2 style="text-decoration-line:overline 1%> Tenor </h2>
+				<h2 style="text-decoration-line:overline 1%"> Tenor </h2>
 				</h1>
 			<!--
 			<nav>
@@ -21,6 +21,7 @@
 	    		</ul>
 			</nav>
 			-->
+
 			</div>
 			<div class="container">
 			
