--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,9 +7,8 @@
 		</head>
 		<body>
 			<div style="background-color:rgb(218,222,226);">
-				<h1 style="padding:1.5%">Miles Herr
-				<h2 style="text-decoration-line:overline 1%"> Tenor </h2>
-				</h1>
+				<h1 style="padding:1.5%">Miles Herr</h1>
+				<h2 style="text-decoration-line:overline;  text-decoration-thickness:1%;"> Tenor </h2>
 			<!--
 			<nav>
 	    		<ul>
