--- a/css/main.css
+++ b/css/main.css
@@ -85,7 +85,7 @@ h1 {
     	text-align: center;
 }
 
-h2{
+small.subHead{
 	margin: 0%;
 	text-align: center;
 	font-family:'Georgia, serif', 'Palatino';
