--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,8 @@
 			<div style="background-color:rgb(218,222,226);">
 				<h1 style="padding:1.5%;">
 					Miles Herr
-					<small class="subHead" style="text-decoration-line:overline; text-decoration-thickness:1%;">
+					<br>
+					<small class="subHead">
 					Tenor 
 					</h2>
 				</h1>
