--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
 		</head>
 		<body>
 			<div style="background-color:rgb(218,222,226);">
-				<h1 style="padding:1.5%;">
+				<h1 style="padding:1.5%;text-decoration:underline black solid 5%;">
 					Miles Herr
 					<br>
 					<small class="subHead">
