--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,8 +12,8 @@
 					<br>
 					<small class="subHead">
 					Tenor 
-					</h2>
-				</h1>
+					</small>
+				</h1
 			<!--
 			<nav>
 	    		<ul>
