--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,13 +7,16 @@
 		</head>
 		<body>
 			<div style="background-color:rgb(218,222,226);">
-				<h1 style="padding:1.5%;text-decoration:underline black solid 5%;">
-					Miles Herr
-					<br>
-					<small class="subHead">
-					Tenor 
-					</small>
-				</h1
+				<h1 style="padding:1.5%;text-decoration:underline black solid 5%;">Miles Herr<br>
+					<small class="subHead">Tenor</small></h1>
+			</div>
+			<div class="container">
+			
+			{{ content }}
+				
+			</div>
+		</body>
+	</html>
 			<!--
 			<nav>
 	    		<ul>
@@ -25,11 +28,4 @@
 	    		</ul>
 			</nav>
 			-->
-
-			</div>
-			<div class="container">
-			
-			{{ content }}
-		
-		</body>
-	</html>
+				
