--- a/css/main.css
+++ b/css/main.css
@@ -89,7 +89,7 @@ small.subHead{
 	margin: 0%;
 	text-align: center;
 	font-family:'Georgia, serif', 'Palatino';
-	font-size: 3em;
+	font-size: .75em;
 	letter-spacing:.25em;
 	padding: 0% 0% 2.5% 0%;
 }
